--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
+  max-width: 1280px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.portrait {
+width: 10%;
 }
