--- a/style.css
+++ b/style.css
@@ -6,5 +6,39 @@ body {
   justify-content: space-between;
 }
 .portrait {
-width: 10%;
+width: 150px;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: bisque;
+}
+.person {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+.nav {
+  width: 50%;
+  align-items: center;
+  padding-right: 5px;
+}
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+}
+.nav-item {
+  list-style-type: none;
+}
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.footer {
+  background-color: antiquewhite;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
